--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "lint": "eslint --ext .js,.vue app test/unit/specs"
   },
   "dependencies": {
+    "swiper": "^3.4.0",
     "vue": "^2.0.1",
+    "vue-lory": "0.0.4",
     "vue-router": "^2.0.2",
+    "vue-slick": "^1.0.0",
+    "vue-swipe": "^2.0.0",
+    "vue-swiper": "^0.5.0",
     "vuex": "^2.0.0"
   },
   "devDependencies": {
