--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint --ext .js,.vue app test/unit/specs"
   },
   "dependencies": {
+    "dotenv": "^2.0.0",
     "vue": "^2.0.1",
     "vue-router": "^2.0.2",
     "vue-swipe": "^2.0.0",
@@ -72,7 +73,8 @@
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.14.1"
+    "webpack-merge": "^0.14.1",
+    "whatwg-fetch": "^2.0.1"
   },
   "engines": {
     "node": ">= 4.0.0",
