--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "unit": "karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue app test/unit/specs",
-    "deploy": "git subtree push --prefix dist heroku master"
+    "deploy": "git push heroku master:master",
+    "postinstall": "NODE_ENV=production npm run build"
   },
   "dependencies": {
     "express": "^4.14.0",
