--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "vue": "^2.0.1",
     "vue-router": "^2.0.2",
     "vue-swipe": "^2.0.0",
-    "vuex": "^2.0.0"
-  },
-  "devDependencies": {
+    "vuex": "^2.0.0",
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     "babel-eslint": "^7.0.0",
