--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "dotenv": "^2.0.0",
+    "jsonapi-serializer": "^3.4.1",
     "vue": "^2.0.1",
     "vue-router": "^2.0.2",
     "vue-swipe": "^2.0.0",
