--- a/package.json
+++ b/package.json
@@ -15,13 +15,6 @@
     "postinstall": "NODE_ENV=production npm run build"
   },
   "dependencies": {
-    "express": "^4.14.0",
-    "dotenv": "^2.0.0",
-    "jsonapi-serializer": "^3.4.1",
-    "vue": "^2.0.1",
-    "vue-router": "^2.0.2",
-    "vue-swipe": "^2.0.0",
-    "vuex": "^2.0.0",
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     "babel-eslint": "^7.0.0",
@@ -34,6 +27,7 @@
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.25.0",
+    "dotenv": "^2.0.0",
     "eslint": "^3.7.1",
     "eslint-config-airbnb-base": "^8.0.0",
     "eslint-friendly-formatter": "^2.0.5",
@@ -48,9 +42,11 @@
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
+    "httpsnippet": "^1.16.5",
     "inject-loader": "^2.0.1",
     "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
+    "jsonapi-serializer": "^3.4.1",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.2.0",
@@ -71,8 +67,12 @@
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.7",
+    "vue": "^2.0.1",
     "vue-loader": "^9.4.0",
+    "vue-router": "^2.0.2",
     "vue-style-loader": "^1.0.0",
+    "vue-swipe": "^2.0.0",
+    "vuex": "^2.0.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
