--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "sass-loader": "^4.0.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
+    "siema": "^1.0.4",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.7",
