--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "vue-style-loader": "^1.0.0",
     "vue-swipe": "^2.0.0",
     "vuex": "^2.0.0",
+    "vuex-router-sync": "^4.0.1",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
