--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "url-loader": "^0.5.7",
     "vue": "^2.0.1",
     "vue-loader": "^9.4.0",
+    "vue-multiselect": "^2.0.0-beta.13",
     "vue-router": "^2.0.2",
     "vue-style-loader": "^1.0.0",
     "vue-swipe": "^2.0.0",
