--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
+    "leaflet": "^1.0.2",
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
     "node-sass": "^3.13.0",
@@ -73,6 +74,7 @@
     "vue-router": "^2.0.2",
     "vue-style-loader": "^1.0.0",
     "vue-swipe": "^2.0.0",
+    "vue_leaflet": "0.0.2",
     "vuex": "^2.0.0",
     "vuex-router-sync": "^4.0.1",
     "webpack": "^1.13.2",
