dispatches twitter action + renders tweets

--- a/package.json
+++ b/package.json
@@ -66,9 +66,10 @@
     "sass-loader": "^4.0.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
-    "siema": "^1.0.2",
+    "siema": "^1.1.1",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
+    "twitter": "^1.7.0",
     "url-loader": "^0.5.7",
     "vue": "^2.0.1",
     "vue-loader": "^9.4.0",
