--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "sass-loader": "^4.0.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
-    "siema": "^1.1.1",
+    "siema": "1.1.1",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
     "twitter": "^1.7.0",
