--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "vue": "^2.0.1",
     "vue-loader": "^9.4.0",
     "vue-multiselect": "^2.0.0-beta.13",
+    "vue-paginate": "^3.5.1",
     "vue-router": "^2.0.2",
     "vue-style-loader": "^1.0.0",
     "vuex": "^2.0.0",
