--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "phantomjs-prebuilt": "^2.1.3",
+    "query-string": "^6.0.0",
     "sass-loader": "^4.0.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
