--- a/package.json
+++ b/package.json
@@ -92,7 +92,5 @@
     "node": ">= 7.10.1",
     "npm": ">= 4.0.5"
   },
-  "devDependencies": {
-    "raw-loader": "^0.5.1"
-  }
+  "devDependencies": {}
 }
