--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "twitter": "^1.7.0",
     "url-loader": "^0.5.7",
     "v-click-outside": "^1.0.3",
+    "v-tooltip": "^2.0.0-rc.33",
     "vue": "^2.0.1",
     "vue-loader": "^9.4.0",
     "vue-multiselect": "^2.0.0-beta.13",
