--- a/package.json
+++ b/package.json
@@ -94,5 +94,7 @@
     "node": ">= 7.10.1",
     "npm": ">= 4.0.5"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "raw-loader": "^0.5.1"
+  }
 }
