--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "ora": "^0.3.0",
     "phantomjs-prebuilt": "^2.1.3",
     "query-string": "^6.0.0",
+    "raw-loader": "^0.5.1",
     "sass-loader": "^4.0.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
@@ -94,7 +95,5 @@
     "node": ">= 7.10.1",
     "npm": ">= 4.0.5"
   },
-  "devDependencies": {
-    "raw-loader": "^0.5.1"
-  }
+  "devDependencies": {}
 }
